--- a/mp-starter/src/main/resources/templates/index.html
+++ b/mp-starter/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="renderer" content="webkit">
-    <title>URCS+业务管理系统</title>
+    <title>数据分析系统</title>
     <!--[if lt IE 9]>
     <meta http-equiv="refresh" content="0;ie.html"/>
     <![endif]-->
@@ -30,7 +30,7 @@
                     <div>
                         <span><img alt="image" class="img-circle" height="50" width="120" th:src="${picUrl}"/></span>
                         <h3 class="" style="color: #ffffff">
-                            </i>URCS+业务管理系统
+                            </i>数据分析系统
                         </h3>
                     </div>
                     <div class="dropdown profile-element hidden">
@@ -106,60 +106,60 @@
     <!--左侧导航结束-->
     <!--右侧部分开始-->
     <div id="page-wrapper" class="gray-bg dashbard-1">
-        <div class="row border-bottom">
-            <nav class="navbar navbar-static-top" role="navigation"
-                 style="margin-bottom: 0">
-                <div class="navbar-header">
+        <!--<div class="row border-bottom">-->
+            <!--<nav class="navbar navbar-static-top" role="navigation"-->
+                 <!--style="margin-bottom: 0">-->
+                <!--<div class="navbar-header">-->
 
-                    <a class="navbar-minimalize minimalize-styl-2 btn btn-default "
-                       href="#" title="收起菜单"><i class="fa fa-bars"></i> </a>
-                    <form role="search" class="navbar-form-custom"
-                          method="post" action="">
-                        <div class="form-group">
-                            <input type="text" placeholder="请输入您需要查找的内容 …"
-                                   class="form-control" name="top-search" id="top-search">
-                        </div>
-                    </form>
-                </div>
-                <ul class="nav navbar-top-links navbar-right">
-                    <!--<li class="hidden-xs"><a href="/blog" target="_Blank"-->
-                    <!--class=""><i class="fa fa-rss-square"></i>博客</a></li>-->
-                    <li class="dropdown"><a class="dropdown-toggle count-info"
-                                            data-toggle="dropdown" href="#"> <i class="fa fa-envelope"></i>
-                        <span class="label label-warning">{{total}}</span>通知
-                    </a>
-                        <ul class="dropdown-menu dropdown-messages">
-                            <li v-for="row in rows" class="m-t-xs">
-                                <div class="dropdown-messages-box">
-                                    <a class="pull-left"> <i
-                                            class="fa fa-server"></i>
-                                    </a>
-                                    <div class="media-body">
-                                        <small class="pull-right">{{row.before}}</small>
-                                        <strong>{{row.sender}}</strong>
-                                        {{row.title}} <br>
-                                        <small class="text-muted">{{row.updateDate}}</small>
-                                    </div>
-                                </div>
-                                <div class="divider"></div>
-                            </li>
-                            <li>
-                                <div class="text-center link-block">
-                                    <a class="J_menuItem" href="/oa/notify/selfNotify"> <i
-                                            class="fa fa-envelope"></i> <strong> 查看所有消息</strong>
-                                    </a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="hidden-xs"><a @click="personal" href="#"><i class="fa fa-id-card"></i> 个人</a></li>
-                    <li class="dropdown hidden-xs"><a
-                            class="right-sidebar-toggle" aria-expanded="false"> <i
-                            class="fa fa-tasks"></i> 主题
-                    </a></li>
-                </ul>
-            </nav>
-        </div>
+                    <!--<a class="navbar-minimalize minimalize-styl-2 btn btn-default "-->
+                       <!--href="#" title="收起菜单"><i class="fa fa-bars"></i> </a>-->
+                    <!--<form role="search" class="navbar-form-custom"-->
+                          <!--method="post" action="">-->
+                        <!--<div class="form-group">-->
+                            <!--<input type="text" placeholder="请输入您需要查找的内容 …"-->
+                                   <!--class="form-control" name="top-search" id="top-search">-->
+                        <!--</div>-->
+                    <!--</form>-->
+                <!--</div>-->
+                <!--<ul class="nav navbar-top-links navbar-right">-->
+                    <!--&lt;!&ndash;<li class="hidden-xs"><a href="/blog" target="_Blank"&ndash;&gt;-->
+                    <!--&lt;!&ndash;class=""><i class="fa fa-rss-square"></i>博客</a></li>&ndash;&gt;-->
+                    <!--<li class="dropdown"><a class="dropdown-toggle count-info"-->
+                                            <!--data-toggle="dropdown" href="#"> <i class="fa fa-envelope"></i>-->
+                        <!--<span class="label label-warning">{{total}}</span>通知-->
+                    <!--</a>-->
+                        <!--<ul class="dropdown-menu dropdown-messages">-->
+                            <!--<li v-for="row in rows" class="m-t-xs">-->
+                                <!--<div class="dropdown-messages-box">-->
+                                    <!--<a class="pull-left"> <i-->
+                                            <!--class="fa fa-server"></i>-->
+                                    <!--</a>-->
+                                    <!--<div class="media-body">-->
+                                        <!--<small class="pull-right">{{row.before}}</small>-->
+                                        <!--<strong>{{row.sender}}</strong>-->
+                                        <!--{{row.title}} <br>-->
+                                        <!--<small class="text-muted">{{row.updateDate}}</small>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="divider"></div>-->
+                            <!--</li>-->
+                            <!--<li>-->
+                                <!--<div class="text-center link-block">-->
+                                    <!--<a class="J_menuItem" href="/oa/notify/selfNotify"> <i-->
+                                            <!--class="fa fa-envelope"></i> <strong> 查看所有消息</strong>-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                            <!--</li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
+                    <!--<li class="hidden-xs"><a @click="personal" href="#"><i class="fa fa-id-card"></i> 个人</a></li>-->
+                    <!--<li class="dropdown hidden-xs"><a-->
+                            <!--class="right-sidebar-toggle" aria-expanded="false"> <i-->
+                            <!--class="fa fa-tasks"></i> 主题-->
+                    <!--</a></li>-->
+                <!--</ul>-->
+            <!--</nav>-->
+        <!--</div>-->
         <div class="row content-tabs">
             <button class="roll-nav roll-left J_tabLeft">
                 <i class="fa fa-backward"></i>
@@ -193,7 +193,7 @@
                     seamless></iframe>
         </div>
         <div class="footer">
-            <div class="pull-right">URCS+业务管理系统</div>
+            <div class="pull-right">by wangyan</div>
         </div>
     </div>
     <!--右侧部分结束-->
