--- a/mp-starter/src/main/resources/templates/login.html
+++ b/mp-starter/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>URCS+业务管理系统登录</title>
+    <title>数据分析系统登录</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.css?v=4.4.0" rel="stylesheet">
     <link href="/css/animate.css" rel="stylesheet">
@@ -32,7 +32,7 @@
                 </div>
                 <div class="m-b"></div>
                 <h3>
-                    欢迎使用 <strong>URCS+业务管理系统</strong>
+                    欢迎使用 <strong>数据分析系统</strong>
                 </h3>
                 <ul class="m-b">
                     <li>
@@ -61,7 +61,7 @@
         <div class="col-sm-5">
             <form id="signupForm">
                 <h3 class="text-center">用户登录</h3>
-                <p class="m-t-md text-center">URCS+业务管理系统</p>
+                <p class="m-t-md text-center">数据分析系统</p>
                 <input type="text" name="username" class="form-control uname"
                        value="admin"/>
                 <input type="password" name="password"
