--- a/mp-starter/src/main/resources/templates/analysis/hydrology.html
+++ b/mp-starter/src/main/resources/templates/analysis/hydrology.html
@@ -46,7 +46,7 @@
 
                         <div class="columns pull-right col-md-2 nopadding">
                             <input id="searchName" type="text" class="form-control"
-                                   placeholder="姓名">
+                                   placeholder="">
                         </div>
                     </div>
                     <table id="exampleTable" data-mobile-responsive="true">
