--- a/mp-starter/src/main/resources/templates/login.html
+++ b/mp-starter/src/main/resources/templates/login.html
@@ -37,24 +37,21 @@
                 <ul class="m-b">
                     <li>
                         <i class="fa fa-arrow-circle-o-right m-r-xs"></i>
-                        日志追踪
-                    </li>
-                    <li>
-                        <i class="fa fa-arrow-circle-o-right m-r-xs"></i>
-                        服务状态
-                    </li>
-                    <li>
-                        <i class="fa fa-arrow-circle-o-right m-r-xs"></i>
-                        业务管理
-                    </li>
-                    <li>
-                        <i class="fa fa-arrow-circle-o-right m-r-xs"></i>
-                        系统监控
+                        用户管理
                     </li>
                     <li>
                         <i class="fa fa-arrow-circle-o-right m-r-xs"></i>
                         角色管理
                     </li>
+                    <li>
+                        <i class="fa fa-arrow-circle-o-right m-r-xs"></i>
+                        数据可视化
+                    </li>
+                    <li>
+                        <i class="fa fa-arrow-circle-o-right m-r-xs"></i>
+                        日志追踪
+                    </li>
+
                 </ul>
             </div>
         </div>
@@ -67,29 +64,6 @@
                 <input type="password" name="password"
                        class="form-control pword m-b" value="111111"/>
                 <a id="login" class="btn btn-login btn-block">登录</a>
-                <!--按钮模块-->
-                <div class="outside-login">
-                    <div class="outside-login-tit">
-                        <span>其他链接</span>
-                    </div>
-                    <div class="outside-login-cot">
-                        <a class="outside-login-btn wxoa actived oschina J-btnSwitchLoginType" target="_Blank"
-                           href="https://www.oschina.net">
-                            <em><i class="fa fa-home"></i></em>
-                            <span>oschina主页</span>
-                        </a>
-                        <a class="outside-login-btn wxoa actived my J-btnSwitchLoginType" target="_Blank"
-                           href="https://gitee.com">
-                            <em><i class="fa fa-git-square"></i></em>
-                            <span>码云仓库</span>
-                        </a>
-                        <a class="outside-login-btn wxoa actived git J-btnSwitchLoginType" target="_Blank"
-                           href="https://github.com">
-                            <em><i class="fa fa-github"></i></em>
-                            <span>GitHub仓库</span>
-                        </a>
-                    </div>
-                </div>
 
             </form>
         </div>
