模版下载完成

--- a/mp-starter/src/main/resources/templates/analysis/soil.html
+++ b/mp-starter/src/main/resources/templates/analysis/soil.html
@@ -46,7 +46,11 @@
 
                         <div class="columns pull-right col-md-2 nopadding">
                             <input id="searchName" type="text" class="form-control"
-                                   placeholder="姓名">
+                                   placeholder="">
+                        </div>
+
+                        <div class="columns pull-right col-md-3 nopadding">
+                            <a href="/analysis/soil/downLoadTmp" download="download">..下载上传模板</a>
                         </div>
                     </div>
                     <table id="exampleTable" data-mobile-responsive="true">
