--- a/mp-starter/src/main/resources/templates/analysis/hydrology.html
+++ b/mp-starter/src/main/resources/templates/analysis/hydrology.html
@@ -48,6 +48,10 @@
                             <input id="searchName" type="text" class="form-control"
                                    placeholder="">
                         </div>
+
+                        <div class="columns pull-right col-md-3 nopadding">
+                            <a href="/analysis/hydrology/downLoadTmp" download="download">..下载上传模板</a>
+                        </div>
                     </div>
                     <table id="exampleTable" data-mobile-responsive="true">
                     </table>
