--- a/mp-starter/src/main/resources/templates/analysis/soil.html
+++ b/mp-starter/src/main/resources/templates/analysis/soil.html
@@ -42,6 +42,7 @@
                         </div>
                         <div class="columns pull-right">
                             <button class="btn btn-success" onclick="reLoad()">查询</button>
+                            <button class="btn btn-success" onclick="showCharts()">展示图表</button>
                         </div>
 
                         <div class="columns pull-right col-md-2 nopadding">
