毕业后第一次修改。

--- a/mp-starter/src/main/resources/templates/analysis/soil.html
+++ b/mp-starter/src/main/resources/templates/analysis/soil.html
@@ -54,6 +54,8 @@
                             <a href="/analysis/soil/downLoadTmp" download="download">..下载上传模板</a>
                         </div>
                     </div>
+                    <div id="toolbar" role="group">
+                    </div>
                     <table id="exampleTable" data-mobile-responsive="true">
                     </table>
                 </div>
@@ -73,6 +75,19 @@
     </div>
 </div>
 <div th:include="include :: footer"></div>
+
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
+<script src="/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
+
+<script type="text/javascript" src="/js/plugins/bootstrap-table/export/bootstrap-table-export.js"></script>
+
+<script type="text/javascript" src="/js/plugins/bootstrap-table/export/FileSaver.js"></script>
+
+<script type="text/javascript" src="/js/plugins/bootstrap-table/export/tableExport.min.js"></script>
+
+<script type="text/javascript" src="/js/plugins/bootstrap-table/export/xlsx.core.min.js"></script>
+
 <script type="text/javascript" src="/js/appjs/analysis/soil/soil.js"></script>
 </body>
 </html>
